# wxr

./: Cargo.toml  README.md  install.sh
src/: data.rs  main.rs  metar.rs
