[package]
name = "wxr"
version = "0.1.0"
authors = ["Melody R.W. <melody@28left.dev>"]
edition = "2021"
repository = "https://gitlab.com/melodyrwx/wxr"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
iso8601 = "0.5.1"